Add sign identity

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+DerivedData/
+Export/
+*.xcarchive
 MeoAsstMac/Resources/resource.zip
 
 # Created by https://www.toptal.com/developers/gitignore/api/xcode,macos
