--- a/MeoAsstMac/MAADev.entitlements
+++ b/MeoAsstMac/MAADev.entitlements
@@ -8,6 +8,8 @@
 	<true/>
 	<key>com.apple.security.device.usb</key>
 	<true/>
+	<key>com.apple.security.files.downloads.read-only</key>
+	<true/>
 	<key>com.apple.security.files.user-selected.read-only</key>
 	<true/>
 	<key>com.apple.security.network.client</key>
